--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Let's Play!</h1>
     <div class="game-container">
       <div class="question" id="game"></div>
-      <h2 class="scoreboard" id="score">Score:<span></span></h2>
+      <h2 class="scoreboard" id="score"></h2>
     </div>
     <script src="script.js"></script>
   </body>
